--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "unity": "2020.3",
     "unityRelease": "33f1",
     "dependencies": {
-        "com.mangosauce.marmalade.core" : "0.0.1"
+        "com.mangosauce.marmalade.core" : ""
     },
     "keywords": [
         "mangosauce",
